[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/battles/BattleUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/battles/BattleScene.gd" type="Script" id=17]

[node name="BattleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BattleUI" parent="." instance=ExtResource( 1 )]

[node name="TopPanel" type="ColorRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 71.0
margin_bottom = 48.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Panel" parent="TopPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TopPanel/Tooltip"]
anchor_right = 1.0
margin_bottom = 7.0
color = Color( 1, 1, 0.921569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopPanel/Tooltip"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 8.0
text = "Blizzard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uses" type="Label" parent="TopPanel/Tooltip"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 1.0
margin_bottom = 8.0
text = "x17"
align = 2

[node name="Label" type="Label" parent="TopPanel/Tooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 8.0
text = "Deal INTx8 Water damage to each foe. 50% chance to SLOW."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="ColorRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 77.0
margin_right = 71.0
margin_bottom = 127.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BottomPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_bottom = -6.0
text = "Asher gains:
+10 HP
+1 STR
+1 AGI
+1 INT
+1 DEF"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Victory" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 21.0
margin_right = 20.0
margin_bottom = 28.0
text = "VICTORY!"
align = 1

[node name="EnemyInfo" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EnemyInfo"]
margin_top = 1.0
margin_right = 72.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="EnemyInfo/Panel"]
anchor_right = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 7.0
color = Color( 0.941176, 0.917647, 0.890196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="EnemyInfo/Panel"]
margin_left = 2.0
margin_right = 71.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
text = "Lv.XX Enemy Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="EnemyInfo/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 6.0
text = "Testing
Testing
Testing
Testing
Testing
Testing
Testing"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="EnemyInfo"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="enemy_pressed" from="BattleUI" to="." method="_on_BattleUI_enemy_pressed"]
[connection signal="player_pressed" from="BattleUI" to="." method="_on_BattleUI_player_pressed"]
[connection signal="pressed" from="EnemyInfo/Close" to="." method="_on_Close_pressed"]
